--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,11 @@
 image: gitpod/workspace-full
 
+image: gitpod/workspace-full  # Your chosen image
+
 tasks:
   - init: |
-      # Install the VSIX extension
-      code --install-extension /workspace/villeplug-0.0.1.vsix
+      # Install the VSIX extension from the root directory
+      code --install-extension ./villeplug-0.0.1.vsix
   - command: |
-      # Launch VS Code (this will open the VS Code environment)
+      # Launch VS Code (this will open the VS Code environment in the Gitpod workspace)
       code .
